--- a/src/app/public/movie/movie.component.html
+++ b/src/app/public/movie/movie.component.html
@@ -1,10 +1,8 @@
-<a class="btn btn-primary" href="movie-details.component.html" role="button">Click Me</a>
-
 <div class="rounded">
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 col-lg-3 col-sm-4 col-xl-2" *ngFor="let movie of movies">
-                <div class="card mb-4" id="{{movie.id}}">
+                <div class="card mb-4">
                     <img src="{{movie.posterUrl}}" alt="{{movie.title}}" />
                 </div>
             </div>
